--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "ast-types": "^0.13.4",
     "base64-js": "^1.5.1",
     "basic-ftp": "^5.0.3",
+    "bcrypt": "^5.1.0",
     "bl": "^4.1.0",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "buffer": "^5.7.1",
     "buffer-crc32": "^0.2.13",
     "bytes": "^3.1.2",
@@ -55,6 +56,7 @@
     "esutils": "^2.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "extract-zip": "^2.0.1",
     "fast-levenshtein": "^2.0.6",
     "fd-slicer": "^1.1.0",
@@ -99,6 +101,7 @@
     "mime-types": "^2.1.35",
     "mitt": "^3.0.0",
     "mkdirp-classic": "^0.5.3",
+    "mongodb": "^5.6.0",
     "ms": "^2.1.2",
     "negotiator": "^0.6.3",
     "netmask": "^2.0.2",
